Fix responsive layout issues in Navbar component, and flag icons in safari browsers

--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -24,6 +24,7 @@
 .info .container-inner {
   width: 80%;
   margin: 0 auto 3rem auto;
+  padding-bottom: 50px;
 }
 
 .info .img-container img {
