--- a/src/components/postcard/Postcard.css
+++ b/src/components/postcard/Postcard.css
@@ -119,6 +119,7 @@
 
 .postcard-info .country-info {
   display: flex;
+  align-items: center;
   text-align: center;
   font-size: 0.9rem;
 }
@@ -163,6 +164,7 @@
 
 .postcard .postcard-info .winner {
   display: flex;
+  align-items: center;
   text-align: center;
   margin-bottom: 0;
   padding-bottom: 0;
